--- a/style.css
+++ b/style.css
@@ -6,78 +6,62 @@
 body{
     background-color: #808026;
       }
-    
-.container {
-    position: relative;
+
+  .container {
+    position: absolute;
+    top: 30%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     width: 800px;
     height: 800px;
-      }
-      
-.container img {
-    position: absolute;
-    top: -50px;
-    left: 200px;
+    }
+    
+  .container img {
     width: 100%;
     height: 100%;
     object-fit: cover;
-      }
-
+    }
+    
 .big-title h1 {
-      font-family: 'Merriweather',black;
-      font-size: 100px;
-      color: #ceb14f;
-      position: absolute;
-      top: 560px;
-      right: 280px;
-    }
-
-    h1
-    p {
-       color: #ffffff;
-       font-family: sans-serif;
-       margin-bottom: 22px;
-    }
-    h1 {
-       text-shadow: 2px 2px #000000;
-       float: left;
-       font-size: 2.5em;
-       font-family: "Crete Round", sans-serif;
-    }
-    p{
-       clear: both;
-       color: #f1f1f1;
-       font-size: 14px;
-       line-height: 22px;
-    }
-
-.words h2 {
     font-family: 'Merriweather',black;
-    font-size: 50px;
+    font-size: 100px;
     color: #ceb14f;
     position: absolute;
-    top: 710px;
-    right: 210px;
-  }
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    }
 
-  h2
+  h1
   p {
     color: #ffffff;
     font-family: sans-serif;
     margin-bottom: 22px;
-  }
-  h2 {
+    }
+  h1 {
     text-shadow: 2px 2px #000000;
     float: left;
     font-size: 2.5em;
     font-family: "Crete Round", sans-serif;
-  }
+    }
   p{
     clear: both;
     color: #f1f1f1;
     font-size: 14px;
     line-height: 22px;
-  }
+    }
 
+.words h2 {
+  font-family: 'Merriweather', black;
+  font-size: 50px;
+  color: #ceb14f;
+  text-shadow: 2px 2px #000000;
+  position: absolute;
+  top: 60%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  white-space: nowrap;
+}
 /*
   ========================================
   Information-Button
@@ -97,7 +81,7 @@ body{
   
     position: absolute;
     top: 80%;
-    left: 53%;
+    left: 50%;
     transform: translate(-50%, -50%);
     
     border: none;
@@ -107,7 +91,53 @@ body{
     transition: all 0.3s ease;
   }
   
-  .custom-button:hover {
+.custom-button:hover {
     background-color: black;
   }
   
+/*
+  ========================================
+  Selection-page
+  ========================================
+*/
+.container2 {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.container2 img {
+  max-width: 60%;
+  max-height: 100%;
+}
+
+.container3 {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.container3 img {
+  max-width: 60%;
+  max-height: 100%;
+}
+
+.container4 {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.container4 img {
+  max-width: 60%;
+  max-height: 100%;
+}
